--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,103 +1,115 @@
 .BANNER {
-    width:100%;
-  
-    height:90vh;
-    background-color:RGB(39, 39, 39);
+    width: 100%;
+    height: 90vh;
+    background-color: RGB(39, 39, 39);
 }
-.Bannerdetail,.Aboutdetail {
-    max-width:1200px;
+
+.Bannerdetail,
+.Aboutdetail {
+    max-width: 1200px;
     margin: 0 auto;
-    display:flex;
+    display: flex;
 }
+
 .BannerItem {
-    width:50%;
-    height:90vh;
-    display:flex;
+    width: 50%;
+    height: 90vh;
+    display: flex;
 }
-.BannerItem >img {
-    display:block;
+
+.BannerItem>img {
+    display: block;
     margin: auto;
 }
+
 .FormBanner {
     height: 30vh;
     color: #fff;
     margin: auto;
     padding: 0 60px;
     border-radius: 10px;
-    display:flex;
-    width:100%;
-    background-color:#313131;
+    display: flex;
+    width: 100%;
+    background-color: #313131;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
+
 .MarginCenterProp {
-    width:100%;
-    margin:auto;
+    width: 100%;
+    margin: auto;
 }
+
 .ButtonContactBanner {
-    width:150px;
+    width: 150px;
     padding: 10px 20px;
     margin-right: 20px;
     font-weight: bold;
     border-radius: 5px;
 }
+
 .abx {
-    background-color:#fafafa;
+    background-color: #fafafa;
     color: #313131;
 }
+
 .aby {
-    background-color:#313131;
-    border : 1px solid #fafafa;
+    background-color: #313131;
+    border: 1px solid #fafafa;
     color: #fafafa;
 }
+
 .ABOUTWEEB {
     height: 60vh;
 }
+
 .Aboutdetail {
     max-width: 1200px;
     margin: 0 auto;
 }
+
 .AboutItem01 {
     width: 70%;
 }
+
 .AboutItem02 {
     width: 30%;
 }
-.AboutItem01,.AboutItem02 {
+
+.AboutItem01,
+.AboutItem02 {
     height: auto;
-    display:flex;
-  
+    display: flex;
 }
-
-
 
 .ABOUTSERVICES {
     width: 100%;
     height: auto;
 }
+
 .Aboutservicesdetail {
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
-   
 }
+
 .AboutservicesItem01 {
     width: 25%;
-   display:flex;
-
- 
+    display: flex;
 }
-.ahu >h3 {
+
+.ahu>h3 {
     border-bottom: 1px solid gray;
     margin-right: 1rem;
     text-align: right;
 }
+
 .AboutservicesItem02 {
     width: 50%;
-   display:flex;
-  
+    display: flex;
 }
-.AboutservicesItem02 >img {
+
+.AboutservicesItem02>img {
     height: 300px;
-  margin: auto;
+    margin: auto;
 }
