--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,73 +1,127 @@
 .Navbar {
     margin: 0;
-    padding: 0;
+    padding: auto;
     height: 8rem;
-}
-
-.Navbardetail {
-    /*Nav-container*/
-    max-width: 1200px;
+    
+  }
+  .Navbardetail {
+    max-width:1200px;
     height: 100%;
     margin: 0 auto;
-    display: flex;
-    background-color: rgb(164, 164, 216);
+    display:flex;
     /* justify-content:space-between; */
+    margin:auto;
+    justify-content: space-between;
+    align-items: center;
+    background-color:rgba(127, 255, 212, 0)
+  }
+  .Navbar_Logo{ /* logo box container*/
+    width:10%;
+    height: fit-content;
+    display:flex;
+    background-color:rgba(137, 43, 226, 0);
 }
-
-.Navbar_Logo {
-    width: 15%;
-    height: auto;
-    display: flex;
-    background-color: blueviolet;
+.Navbar_Logo > img {
+    max-width:100%;
+    height: 15vh;
+    margin-left: 1rem;
 }
-
 .Navbar_Detail {
-    width: 85%;
-    height: auto;
-    display: flex;
-    background-color: antiquewhite;
-}
-
-.Navbar_Logo>img {
-    max-width: 100%;
-    height: 10vh;
-}
-
-.Navbar_Detail>.MarginCenterProp {
-    /*Hero section*/
-    width: 100%;
-    margin: auto;
-    background-color: chartreuse;
+    width:90%;
+    height: 100%;
+    background-color:rgba(255, 20, 145, 0);
+    display: inline-flex;
 }
 
 .NavbarMenu {
-    display: flex;
-    justify-content: space-between;
-    background-color: rgb(157, 12, 12);
-    margin: 0rem 2rem 0rem 2rem;
+    display:flex;
+    background-color: rgba(189, 183, 107, 0);
+    width: 80%;
+    margin: auto;
+    float: right;
+}
+
+.NavbarMenu>ul {
+    width: 100%;
+    justify-content: right;
 }
 
 .ListItemMenu {
+    display:flex;
+    background-color:rgba(21, 104, 187, 0);
+    width: 100%;
+}
+
+li>a {
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 0.1em;
     display: flex;
-    height: relative;
-    background-color: chocolate;
+    padding: 37px 15px;
+    padding-bottom: 53.5px;
+    position: relative;
 }
 
-.ItemMenu {
+li>a:after {    
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
     display: block;
+    height: 4px;
+    left: 0%;
+    position: absolute;
+    background: rgb(245, 87, 87);
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+}
+li>a:hover:after { 
+    width: 100%; 
+    left: 0; 
+}
+
+
+
+.ButtonContact_NavMenu {
+    display:flex;
+    float: right;
+    height: 2rem;
+    height:100%;
+}
+.ButtonContact_NavMenu>button {
+    padding: 12px 29px;
+    background-color: #020202;
+    border: none;
+    border-radius: 5px;
+    box-sizing: border-box;
+    transition: all 0.3s ease-out 0s;
     cursor: pointer;
-    background-color: rgb(164, 164, 216);
+    color: #ffffff;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1rem;
+    font-weight: bold;
+    margin: auto;
+    margin-right:0rem;
 }
 
-.ButtonContactNavMenu {
-    display: block;
+
+.ItemMenu,.ButtonContactNavMenu {
+    display:block;
     padding: 0 2rem;
-}
-
-.ButtonContactNavMenu {
-    background-color: var(--black);
-    border-radius: 15px;
+   
+  }
+  .ButtonContactNavMenu {
+    background-color:var(--black);
+    border-radius: 5px;
     color: var(--text-white);
     font-size: var(--fz-text-btn);
-    font-weight: bold;
-}
+    font-weight:bold;
+  }
+   
+  
+  .MarginCenterProp { /* ko thc phan nav*/
+    width:100%;
+    margin:auto;
+    background-color:rgba(0, 100, 0, 0);
+  }
